changed debug, chanfed chunkgen, restructured some things to be more readable